tests/codegen/errors/codegen/precise-arity/atom.codegen.diagnostic.codegen.branch.array.call.too.many.args.connected/codegen-branch-array-call-too-many-args-connected.mon
;; TEST-ID: tests.codegen.codegen-error.codegen-branch-array-call-too-many-args-connected
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: codegen-errors/precise-arity
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: array used as function requires exactly 1 argument
;; TEST-ATOM: atom.codegen.diagnostic.codegen.branch.array.call.too.many.args.connected
;; TEST-CODEGEN-ATOM: atom.codegen.diagnostic.codegen.branch.array.call.too.many.args.connected
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: array used as function requires exactly 1 argument
;; TEST-READER-PATH: reader.c:1 codegen.call.array-arity
;; TEST-CODEGEN-PATH: diagnostic.codegen.call.array-arity
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: codegen
;; TEST-COVERAGE: reader.c:1 array used as function requires exactly 1 argument
;; TEST-USES-ATOM: atom.codegen.diagnostic.codegen.branch.array.call.too.many.args.connected
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.codegen.error.precise
;; TEST-DEPENDS-ON: atom.reader.parser.list-call
;; TEST-DEPENDS-ON: atom.codegen.collection.array-as-function
;; TEST-REFINES: atom.codegen.diagnostic.array-function-arity
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/precise-arity/atom.codegen.diagnostic.codegen.branch.array.call.too.many.args.connected
;; TEST-MENU-PATH: codegen/errors/codegen/precise-arity/atom.codegen.diagnostic.codegen.branch.array.call.too.many.args.connected
;; TEST-ATOM-LEAF: atom.codegen.diagnostic.codegen.branch.array.call.too.many.args.connected
;; TEST-CLI-TARGET: codegen errors codegen precise-arity

(module Main)
(define xs [1 2])
(show (xs 0 1))
